--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,22 @@
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
     "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx src/scripts/seed.ts"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "@hono/node-server": "^1.19.5",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "hono": "^4.9.11",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "pdf-parse": "^2.4.3",
     "pg": "^8.16.3"
   },
   "devDependencies": {
