--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "next": "15.5.4",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^4.10.38",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
