--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Common environment variables
-API_BASE_URL=http://localhost:3001
-FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_API_BASE_URL=https://ycwc-backend.vercel.app/
+FRONTEND_URL=https://abroadly-ycwc.vercel.app/
