--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,13 +28,13 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "16.0.10",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^4.10.38",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
@@ -46,11 +46,15 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "shadcn": "^3.4.0",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
